[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmsadwl"
version = "1.0.3"
description = "Lenovo LMSA ROM Downloader — download firmware from official Lenovo servers"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
lmsadwl = "lmsadwl.cli:main"

[tool.setuptools.packages.find]
include = ["lmsadwl*"]
